.:[ 0.0.2.23 ]:.

New Features
[x] Support for generic methods when creating custom method expect providers.

.:[ 0.0.2.22 ]:.

Changes
[x] Public API pruned to only expose relevant client classes.

New Features
[x] ITestInterceptor introduced for composable Before/After handling
[x] Verification using conversion to bool operator return and display the original object

.:[ 0.0.2.21 ]:.

Changes
[x] run after steps even when before raises an exception.

New Features
[x] Support for verification of objects imblicitly convertable to bool

Bug Fixes
[x] Repport failing subexpression when evaluation paramters

.:[ 0.0.2.20 ]:.

New Features
[x] Flexible pending attributes

Bug Fixes
[x] Custom IMethodExpectProvider detection faile for user code
[x] Subexpression exceptions was wrongly reported as NullSubexpressions leading to much confusion. 

.:[ 0.0.2.19 ]:.

New Features
[x] DisplayClass attribute
[x] Examples row builders
[x] NUnit 2.5.10.11092 support added

Bug Fixes
[x] Inherited Before/After action execution order

.:[ Undecided ]:.
[ ] R# integration
[ ] Standalone console runner
[ ] Standalone UI runner
    [ ] Randomize execution order of tests