@@ -40,8 +40,8 @@ namespace Cone.Expectations
             var eval = new ExpressionEvaluator();
             var call = (MethodCallExpression)expression.Body;
             var expect = provider.GetExpectation(call, call.Method, 
-                eval.EvaluateAsTarget(call.Object, call).Value,
-                (object[])eval.EvaluateAll(call.Arguments, call).Value);
+                eval.EvaluateAsTarget(call.Object, call).Result,
+                (object[])eval.EvaluateAll(call.Arguments, call).Result);
             return expect.FormatExpected(new NullFormatter());
         }
     }
